--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   json_annotation: ^4.8.0
   google_maps_flutter: ^2.3.0
   table_calendar: ^3.0.9
+  cached_network_image: ^3.2.3
+  flutter_rating_bar: ^4.0.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
